<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/nav_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/nav_bg">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/selector_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_title"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_base"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/img_wroundbox"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:src="@drawable/img_icarewatch_off"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/fail_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_fail"
                android:textColor="#ff9d1d"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/disc_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/scan_text1"
                android:textColor="#777777"
                android:textSize="12sp" />

            <kr.co.ethree.icare.widget.MaxHeightListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:dividerHeight="0dp"
                android:divider="@android:color/transparent"
                app:maxHeight="181dp"/>

            <Button
                android:id="@+id/scan_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:padding="0dp"
                android:layout_marginLeft="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_scan"
                android:text="@string/scan_btn1"
                android:textColor="@drawable/selector_scan_color"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:padding="0dp"
                android:layout_marginLeft="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_scan"
                android:text="@string/scan_btn3"
                android:textColor="@drawable/selector_scan_color"
                android:visibility="gone"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
