<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/nav_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/nav_bg">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/selector_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_title"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/selector_share" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nav_bar_layout"
        android:background="@drawable/bg_base"
        android:orientation="vertical"
        android:paddingBottom="56dp">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/img_setting_photo_n" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_below="@+id/profile_image_view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="252dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/img_wroundbox"
            android:orientation="vertical"
            android:padding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/setting_connect"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/setting_text_size" />

                    <ImageButton
                        android:id="@+id/connect_off_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/selector_connect_off" />

                    <Button
                        android:id="@+id/connect_on_btn"
                        android:layout_width="68dp"
                        android:layout_height="26dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/selector_connect_on"
                        android:padding="0dp"
                        android:text="연결해제"
                        android:textColor="@drawable/selector_connect_on_color"
                        android:textSize="13sp"
                        android:visibility="gone"
                        style="?android:attr/borderlessButtonStyle"/>

                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/setting_push"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/setting_text_size" />

                    <ImageButton
                        android:id="@+id/push_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/btn_switch_off" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gray_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/setting_check"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/setting_text_size" />

                    <Button
                        android:id="@+id/auto_btn"
                        android:layout_width="64dp"
                        android:layout_height="26dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/btn_check_auto"
                        android:gravity="center_vertical"
                        android:paddingBottom="0dp"
                        android:paddingTop="0dp"
                        android:text="자동"
                        android:textColor="#31c3be"
                        android:textSize="13sp"
                        style="?android:attr/borderlessButtonStyle"/>

                    <Button
                        android:id="@+id/hand_btn"
                        android:layout_width="64dp"
                        android:layout_height="26dp"
                        android:layout_above="@+id/auto_btn"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/btn_check_hand"
                        android:gravity="center_vertical"
                        android:paddingBottom="0dp"
                        android:paddingTop="0dp"
                        android:text="수동"
                        android:textColor="#666666"
                        android:textSize="13sp"
                        style="?android:attr/borderlessButtonStyle"/>

                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/setting_version"
                        android:textColor="@color/setting_text_color"
                        android:textSize="@dimen/setting_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="20dp"
                        android:text="1.0.1"
                        android:textColor="#666666"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tabbar_bg"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/selector_tab_home" />

        <ImageButton
            android:id="@+id/monitor_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/selector_tab_monitor" />

        <ImageButton
            android:id="@+id/icare_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/selector_tab_icare" />

        <ImageButton
            android:id="@+id/setting_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/tabbar_btn_setting_p" />

    </LinearLayout>

</RelativeLayout>
